Added open graph discriptions

--- a/404.html
+++ b/404.html
@@ -11,6 +11,7 @@
 <meta property="og:url" content="https://betterdocs.net/" />
 <meta property="og:site_name" content="Omni" />
 <meta property="og:title" content="404 Page not found!" />
+<meta property="og:description" content="404 Page not found!" />
 <meta property="og:image" content="https://i.imgur.com/GZVRLfz.png" />
 <!-- Template CSS -->
 <link href=https://0mniscient.github.io/404_files/style.css rel=stylesheet media=all>
