--- a/install_plugin.html
+++ b/install_plugin.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
-<html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#"><head>
-<title>How to install Plugins</title>
-<meta charset=utf-8>
-<meta content="IE=edge" http-equiv=X-UA-Compatible>
-<meta content="width=device-width,initial-scale=1" name=viewport>
-<meta content="How to install custom plugins for BetterDiscord to make your Discord experience a whole lot better." name=description>
-<meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
-<!-- CSS -->
-<link rel="stylesheet" href="/stylesheets/style.css">
-<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
 
-<!-- Open Graph -->
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://betterdocs.net/" />
-<meta property="og:site_name" content="Omni" />
-<meta property="og:title" content="BetterDiscord Docs" />
-<meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
-<!-- Icon -->
-<link href=https://imgur.com/GZVRLfz.png rel="shortcut icon">
-<!-- Google Analytics -->
-<script>
-    (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+<head>
+    <title>How to install Plugins</title>
+    <meta charset=utf-8>
+    <meta content="IE=edge" http-equiv=X-UA-Compatible>
+    <meta content="width=device-width,initial-scale=1" name=viewport>
+    <meta content="How to install custom plugins for BetterDiscord to make your Discord experience a whole lot better." name=description>
+    <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
+    <!-- CSS -->
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
-    ga('create', 'UA-65593962-3', 'auto');
-    ga('send', 'pageview');
-</script>
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://betterdocs.net/" />
+    <meta property="og:site_name" content="Omni" />
+    <meta property="og:title" content="BetterDiscord Docs" />
+    <meta property="og:description" content="How to install custom plugins for BetterDiscord to make your Discord experience a whole lot better." />
+    <meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
+    <!-- Icon -->
+    <link href=https://imgur.com/GZVRLfz.png rel="shortcut icon">
+    <!-- Google Analytics -->
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-65593962-3', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
 
 <body>
@@ -74,15 +77,11 @@
                     <article class="article-container" itemscope itemtype="http://schema.org/Article">
                         <div class="article-inner">
                             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Popular Ad -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-1998206533560539"
-     data-ad-slot="6545618600"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+                            <!-- Popular Ad -->
+                            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1998206533560539" data-ad-slot="6545618600" data-ad-format="auto"></ins>
+                            <script>
+                                (adsbygoogle = window.adsbygoogle || []).push({});
+                            </script>
                             <div class="article">
                                 <div class="inner">
                                     <header class="article-header">
@@ -166,22 +165,18 @@ Mac: ~/Library/Preferences/BetterDiscord/plugins</code></pre></div>make sure the
                     <a href="https://twitter.com/Omniscien_t" class="footer-link" target="_blank"><i class="fa fa-twitter"></i></a>
                     <a href="https://github.com/0mniscient" class="footer-link" target="_blank"><i class="fa fa-github-alt"></i></a>
                 </div>
-										<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-1998206533560539",
-    enable_page_level_ads: true
-  });
-</script>
-<!-- Ad -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-1998206533560539"
-     data-ad-slot="6846685408"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({
+                        google_ad_client: "ca-pub-1998206533560539",
+                        enable_page_level_ads: true
+                    });
+                </script>
+                <!-- Ad -->
+                <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1998206533560539" data-ad-slot="6846685408" data-ad-format="auto"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
             </div>
         </footer>
 
@@ -237,30 +232,36 @@ Mac: ~/Library/Preferences/BetterDiscord/plugins</code></pre></div>make sure the
 
 
 
-                <script type="text/javascript">//<![CDATA[ 
-(function() {
-    var configuration = {
-    "token": "eb8900400e7353fcbd2e9758c3c3cb6d",
-    "excludeDomains": [
-        "google.com"
-    ],
-    "capping": {
-        "limit": 5,
-        "timeout": 24
-    },
-    "popUnder": {
-        "enabled": true
-    }
-};
-    var script = document.createElement('script');
-    script.async = true;
-    script.src = '//cdn.shorte.st/link-converter.min.js';
-    script.onload = script.onreadystatechange = function () {var rs = this.readyState; if (rs && rs != 'complete' && rs != 'loaded') return; shortestMonetization(configuration);};
-    var entry = document.getElementsByTagName('script')[0];
-    entry.parentNode.insertBefore(script, entry);
-})();
-//]]></script>                
-        
+    <script type="text/javascript">
+        //<![CDATA[ 
+        (function() {
+            var configuration = {
+                "token": "eb8900400e7353fcbd2e9758c3c3cb6d",
+                "excludeDomains": [
+                    "google.com"
+                ],
+                "capping": {
+                    "limit": 5,
+                    "timeout": 24
+                },
+                "popUnder": {
+                    "enabled": true
+                }
+            };
+            var script = document.createElement('script');
+            script.async = true;
+            script.src = '//cdn.shorte.st/link-converter.min.js';
+            script.onload = script.onreadystatechange = function() {
+                var rs = this.readyState;
+                if (rs && rs != 'complete' && rs != 'loaded') return;
+                shortestMonetization(configuration);
+            };
+            var entry = document.getElementsByTagName('script')[0];
+            entry.parentNode.insertBefore(script, entry);
+        })();
+        //]]>
+    </script>
+
 
 
 </body>
