--- a/themes/ponyo.html
+++ b/themes/ponyo.html
@@ -6,7 +6,7 @@
     <meta charset=utf-8>
     <meta content="IE=edge" http-equiv=X-UA-Compatible>
     <meta content="width=device-width,initial-scale=1" name=viewport>
-    <meta content="Its umm a kinky theme by the best" name=description>
+    <meta content="Its umm a kinky (not really) theme by the best" name=description>
     <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
     <!-- CSS -->
     <!-- CSS -->
@@ -18,6 +18,7 @@
     <meta property="og:url" content="https://betterdocs.net/" />
     <meta property="og:site_name" content="BetterDiscord Docs" />
     <meta property="og:title" content="Ponyo" />
+    <meta property="og:description" content="Its umm a kinky (not really) theme by the best" />
     <meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
     <!-- Icon -->
     <link href=https://imgur.com/GZVRLfz.png rel="shortcut icon">
