--- a/making_theme.html
+++ b/making_theme.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
-<html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#"><head>
-<title>How to make a Theme</title>
-<meta charset=utf-8>
-<meta content="IE=edge" http-equiv=X-UA-Compatible>
-<meta content="width=device-width,initial-scale=1" name=viewport>
-<meta content="A step by step tutorial how to make a theme for BetterDiscord users" name=description>
-<meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
-<!-- CSS -->
-<link rel="stylesheet" href="/stylesheets/style.css">
-<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
 
-<!-- Open Graph -->
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://betterdocs.net/" />
-<meta property="og:site_name" content="Omni" />
-<meta property="og:title" content="BetterDiscord Docs" />
-<meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
-<!-- Icon -->
-<link href=https://imgur.com/GZVRLfz.png rel="shortcut icon">
-<!-- Google Analytics -->
-<script>
-    (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+<head>
+    <title>How to make a Theme</title>
+    <meta charset=utf-8>
+    <meta content="IE=edge" http-equiv=X-UA-Compatible>
+    <meta content="width=device-width,initial-scale=1" name=viewport>
+    <meta content="A step by step tutorial how to make a theme for BetterDiscord users." name=description>
+    <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
+    <!-- CSS -->
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
-    ga('create', 'UA-65593962-3', 'auto');
-    ga('send', 'pageview');
-</script>
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://betterdocs.net/" />
+    <meta property="og:site_name" content="Omni" />
+    <meta property="og:title" content="BetterDiscord Docs" />
+    <meta property="og:description" content="A step by step tutorial how to make a theme for BetterDiscord users." />
+    <meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
+    <!-- Icon -->
+    <link href=https://imgur.com/GZVRLfz.png rel="shortcut icon">
+    <!-- Google Analytics -->
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-65593962-3', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
 
 <body>
@@ -117,8 +120,7 @@ Mac: ~/Library/Preferences/BetterDiscord/themes/</code></pre></div>
                                                             <p>Make a file called <code>ScarryNight.theme.css</code>
                                                                 <li>
                                                                     <p>Open the file we just made with a text editor (not notepad) and insert this on the <b>first</b> line
-                                                                        <div class=highlighter-rouge><pre class=highlight><code>//META{"name":"Scarry_Night","description":"My first theme.","author":"Omniscient","version":"1.00"}*//</code></pre></div>Tip: Spaces in the title should
-                                                                        use _ instead of an actual space to fix any future problems.
+                                                                        <div class=highlighter-rouge><pre class=highlight><code>//META{"name":"Scarry_Night","description":"My first theme.","author":"Omniscient","version":"1.00"}*//</code></pre></div>Tip: Spaces in the title should use _ instead of an actual space to fix any future problems.
                                                                         <li>
                                                                             <p>When you reload Discord go to <code>themes</code> in the BetterDiscord settings and you should see this.
                                                                                 <br><img alt="ScarryNight in BetterDiscord settings" src=https://i.imgur.com/XDcIv6s.png>
@@ -263,22 +265,18 @@ border-bottom: 1px solid transparent !important;
                     <a href="https://twitter.com/Omniscien_t" class="footer-link" target="_blank"><i class="fa fa-twitter"></i></a>
                     <a href="https://github.com/0mniscient" class="footer-link" target="_blank"><i class="fa fa-github-alt"></i></a>
                 </div>
-										<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-1998206533560539",
-    enable_page_level_ads: true
-  });
-</script>
-<!-- Ad -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-1998206533560539"
-     data-ad-slot="6846685408"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({
+                        google_ad_client: "ca-pub-1998206533560539",
+                        enable_page_level_ads: true
+                    });
+                </script>
+                <!-- Ad -->
+                <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1998206533560539" data-ad-slot="6846685408" data-ad-format="auto"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
             </div>
         </footer>
 
