--- a/themes/wheattransparency.html
+++ b/themes/wheattransparency.html
@@ -16,6 +16,7 @@
 <meta property="og:url" content="https://betterdocs.net/" />
 <meta property="og:site_name" content="BetterDiscord Docs" />
 <meta property="og:title" content="Wheat Transparency" />
+<meta property="og:description" content="A wheat theme for Discord" />
 <meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
 <!-- Icon -->
 <link href=https://imgur.com/GZVRLfz.png rel="shortcut icon">
