--- a/plugins.html
+++ b/plugins.html
@@ -184,7 +184,7 @@
                             <h1 id="plugin-list-title">Plugins</h1>
                             <a href="https://goo.gl/forms/CsqMsLqpFXHHqEb13" target="_blank" class="add-pencil" title="Add Plugin"><i class="fa fa-plus"></i></a>
                             <input type="search" id="plugin-search-input" placeholder="Search plugins...">
-                            <div id="plugin-list-count">59 items</div>
+                            <div id="plugin-list-count">60 items</div>
                         </header>
                         <div class="theme-btns">
                             <div class="theme-class">
@@ -1059,6 +1059,18 @@
                                     <a href="#Hashtag" class="plugin-tag">Embed</a>
 
                                     <a href="#Custom" class="plugin-tag">Custom</a>
+
+                                </div>
+                            </li>
+                            
+                            <li class="plugin on">
+                                <a href="http://viid.me/qzR0NQ" class="plugin-name" target="_blank">texPlugin</a>
+                                <p class="plugin-desc">Turn text into Latext.</p>
+                                <div class="plugin-tag-list">
+
+                                    <a href="#Mitchell" class="plugin-tag">Mitchell</a>
+
+                                    <a href="#Latext" class="plugin-tag">Latext</a>
 
                                 </div>
                             </li>
