changes to theme preview

--- a/themes/assets/darkdiscord.html
+++ b/themes/assets/darkdiscord.html
@@ -165,18 +165,16 @@
                                                                     <h2><span class="username-wrapper"><strong class="user-name" style="color: rgb(81, 145, 226);">BetterDiscord</strong></span><span class="highlight-separator"> - </span><span class="timestamp">12/07/2015</span></h2>
                                                                     <div class="message-text">
                                                                         <div class="btn-option"></div>
-                                                                        <div class="markup"><!-- react-text: 406 -->Supported Discord Version: ^0.0.292
+                                                                        <div class="markup"><!-- react-text: 406 -->Very basic static theme preview
                                                                             
-Download:<!-- /react-text --> <a href="https://betterdiscord.net" target="_blank" rel="noreferrer"><!-- react-text: 408 -->https://betterdiscord.net<!-- /react-text --></a><!-- react-text: 409 -->
+Download BetterDiscord at<!-- /react-text --> <a href="https://betterdiscord.net" target="_blank" rel="noreferrer"><!-- react-text: 408 -->https://betterdiscord.net<!-- /react-text --></a><!-- react-text: 409 -->
                                                                             
-Latest Core Version: 0.2.8 - Installer 0.2.81 - 12/07/2016 
-Date: 07/05/2016 
+All functions are <b>disabled</b> for the purpose of the preview.
+This website is in not affiliated with BetterDiscord.
 ====================================================
-Latest JavaScript Version: 1.73 
-Date: 24/05/2016 
+Links
 ====================================================
-<!-- /react-text -->
-<a href="https://betterdocs.net/" target="_blank" rel="noreferrer"><!-- react-text: 419 -->https://betterdocs.net/<!-- /react-text --></a> <!-- react-text: 420 -->|<!-- /react-text --> <a href="https://twitter.com/Omniscien_t" target="_blank" rel="noreferrer"><!-- react-text: 422 -->https://twitter.com/Omniscien_t<!-- /react-text --></a> <!-- react-text: 423 -->|<!-- /react-text --> <a href="https://github.com/0mniscient" target="_blank" rel="noreferrer"><!-- react-text: 425 -->https://github.com/0mniscient<!-- /react-text --></a><span class="edited"><!-- react-text: 427 -->(<!-- /react-text --><!-- react-text: 428 -->edited<!-- /react-text --><!-- react-text: 429 -->)<!-- /react-text --></span></div>
+<!-- /react-text --><a href="https://betterdocs.net/" target="_blank" rel="noreferrer"><!-- react-text: 419 -->https://betterdocs.net/<!-- /react-text --></a> <!-- react-text: 420 -->|<!-- /react-text --> <a href="https://twitter.com/Omniscien_t" target="_blank" rel="noreferrer"><!-- react-text: 422 -->https://twitter.com/Omniscien_t<!-- /react-text --></a> <!-- react-text: 423 -->|<!-- /react-text --> <a href="https://github.com/0mniscient" target="_blank" rel="noreferrer"><!-- react-text: 425 -->https://github.com/0mniscient<!-- /react-text --></a><span class="edited"><!-- react-text: 427 -->(<!-- /react-text --><!-- react-text: 428 -->edited<!-- /react-text --><!-- react-text: 429 -->)<!-- /react-text --></span></div>
                                                                     </div>
                                                                 </div>
                                                                 <div class="accessory"></div>
@@ -207,6 +205,24 @@ Date: 24/05/2016
                                                             </div>
                                                         </div>
                                                     </div>
+													<div class="message-group-blocked revealed">
+														<div class="message-group-blocked-btn">1 Blocked Message</div>
+														<div class="message-group hide-overflow">
+															<div class="avatar-large stop-animation" style="background-image: url(&quot;https://cdn.discordapp.com/avatars/82981355452891136/8cd6e126778da2086db46ab6a315f3f6.jpg?size=256&quot;);"></div>
+															<div class="comment">
+																<div class="message first">
+																	<div class="body">
+																		<h2><span class="username-wrapper"><strong class="user-name">Atom</strong></span><span class="highlight-separator"> - </span><span class="timestamp">Today at 1:28 PM</span></h2>
+																			<div class="message-text">
+																				<div class="btn-option"></div>
+																				<div class="markup">This is a blocked message.</div>
+																			</div>
+																		</div>
+																	<div class="accessory"></div>
+																</div>
+															</div>
+														</div>
+													</div>
                                                     <div class="divider">
                                                         <div></div><span>April 5, 2016</span>
                                                         <div></div>
