--- a/plugins.html
+++ b/plugins.html
@@ -184,7 +184,7 @@
                             <h1 id="plugin-list-title">Plugins</h1>
                             <a href="https://goo.gl/forms/CsqMsLqpFXHHqEb13" target="_blank" class="add-pencil" title="Add Plugin"><i class="fa fa-plus"></i></a>
                             <input type="search" id="plugin-search-input" placeholder="Search plugins...">
-                            <div id="plugin-list-count">59 items</div>
+                            <div id="plugin-list-count">60 items</div>
                         </header>
                         <div class="theme-btns">
                             <div class="theme-class">
@@ -450,6 +450,20 @@
                                     <a href="#Utilities" class="plugin-tag">Utilities</a>
 
                                     <a href="#Developer" class="plugin-tag">Developer</a>
+
+                                </div>
+                            </li>
+                            
+                            <li class="plugin on">
+                                <a href="http://viid.me/qcwTqF" class="plugin-name" target="_blank">P.complete</a>
+                                <p class="plugin-desc">A plugin that gives you IRC-style auto-completion on nicknames.</p>
+                                <div class="plugin-tag-list">
+
+                                    <a href="#XFoxPrower" class="plugin-tag">XFoxPrower</a>
+
+                                    <a href="#Auto" class="plugin-tag">Auto</a>
+
+                                    <a href="#IRC" class="plugin-tag">IRC</a>
 
                                 </div>
                             </li>
