--- a/plugins.html
+++ b/plugins.html
@@ -184,7 +184,7 @@
                             <h1 id="plugin-list-title">Plugins</h1>
                             <a href="https://goo.gl/forms/CsqMsLqpFXHHqEb13" target="_blank" class="add-pencil" title="Add Plugin"><i class="fa fa-plus"></i></a>
                             <input type="search" id="plugin-search-input" placeholder="Search plugins...">
-                            <div id="plugin-list-count">60 items</div>
+                            <div id="plugin-list-count">61 items</div>
                         </header>
                         <div class="theme-btns">
                             <div class="theme-class">
@@ -1025,6 +1025,22 @@
                                     <a href="#Quality" class="plugin-tag tag-invis">Quality</a>
 
                                     <a href="#High" class="plugin-tag tag-invis">High</a>
+
+                                </div>
+                            </li>
+                            
+                            <li class="plugin on">
+                                <a href="http://viid.me/qcwSIy" class="plugin-name" target="_blank">CustomNotifications</a>
+                                <p class="plugin-desc">Allows you to change the sounds for the notifications.</p>
+                                <div class="plugin-tag-list">
+
+                                    <a href="#Yoshivb" class="plugin-tag">Yoshivb</a>
+
+                                    <a href="#Notifications" class="plugin-tag">Notifications</a>
+
+                                    <a href="#Custom" class="plugin-tag">Custom</a>
+
+                                    <a href="#Sound" class="plugin-tag">Sound</a>
 
                                 </div>
                             </li>
