--- a/emotes.html
+++ b/emotes.html
@@ -74,6 +74,12 @@
         </header>
 
         <div id="content-wrap">
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- Popular Ad -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1998206533560539" data-ad-slot="6545618600" data-ad-format="auto"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
             <div id="content" class="wrapper">
                 <div id="content-inner">
                     <article class="article-container" itemscope itemtype="http://schema.org/Article">
