--- a/themes/assets/lightdiscord.html
+++ b/themes/assets/lightdiscord.html
@@ -51,19 +51,19 @@
                                                     <a draggable="false" class="avatar-small" href="#" style="background-image: url(&quot;https://cdn.discordapp.com/icons/153708594091655168/297695be9596b5ccde7bff923e9ff61b.jpg&quot;);"></a>
                                                 </div>
                                             </div>
-											<div class="badge">10</div>
+						<div class="badge">10</div>
                                         </div>
                                         <div class="guild selected unread">
                                             <div draggable="true">
                                                 <div class="guild-inner" draggable="false" style="border-radius: 15px;">
-                                                    <a draggable="false" class="avatar-small" href="#" style="background-image: url(&quot;https://cdn.discordapp.com/icons/86004744966914048/c0b870197488544acc4835e6f9e8beec.jpg&quot;);"></a>
+                                                    <a draggable="false" class="avatar-small" href="#" style="background-image: url(&quot;https://cdn.discordapp.com/icons/86004744966914048/c8d49dc02248e1f55caeb897c3e1a26e.png&quot;);"></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="guild unread">
                                             <div draggable="true">
                                                 <div class="guild-inner" draggable="false" style="border-radius: 25px;">
-                                                    <a draggable="false" class="avatar-small" href="#" style="background-image: url(&quot;https://cdn.discordapp.com/icons/156239548781690880/50f784379184abfbc1929f071b1a8a50.jpg&quot;);"></a>
+                                                    <a draggable="false" class="avatar-small" href="#" style="background-image: url(&quot;https://cdn.discordapp.com/icons/41771983423143937/edc44e98a690a1f76c5ddec68a0a6b9e.png&quot;);"></a>
                                                 </div>
                                             </div>
                                         </div>
