--- a/themes.html
+++ b/themes.html
@@ -480,6 +480,30 @@
 
                             </div>
                         </li>
+                        
+                        <li class="plugin on">
+                            <div class="plugin-screenshot">
+                                <img src="https://imgur.com/ME6KMNQ.gif" data-src="https://i.imgur.com/FTT0TY2.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
+                                <a href="https://betterdocs.net/themes/colorize.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a>
+                            </div>
+                            <a href="https://betterdocs.net/themes/colorize.html" class="plugin-name">Colorize</a>
+                            <p class="plugin-desc">Colorize your Discord to your liking!</p>
+                            <div class="plugin-tag-list">
+
+                                <a href="#Omniscient" class="plugin-tag">Omniscient</a>
+
+                                <a href="#Maple" class="plugin-tag">Maple</a>
+
+                                <a href="#Custom" class="plugin-tag">Custom</a>
+
+                                <a href="#Colors" class="plugin-tag">Colors</a>
+
+                                <a href="#Dark" class="plugin-tag tag-invis">Dark</a>
+                                
+                                <a href="#Light" class="plugin-tag tag-invis">Light</a>
+
+                            </div>
+                        </li>
 
                         <li class="plugin on">
                             <div class="plugin-screenshot">
