--- a/plugins.html
+++ b/plugins.html
@@ -862,6 +862,20 @@
                             </li>
                             
                             <li class="plugin on">
+                                <a href="http://viid.me/qnWf5R" class="plugin-name" target="_blank">ResizeX</a>
+                                <p class="plugin-desc">Lets you resize videos and images</p>
+                                <div class="plugin-tag-list">
+
+                                    <a href="#XFoxPrower" class="plugin-tag">XFoxPrower</a>
+
+                                    <a href="#ResiZe" class="plugin-tag">ResiZe</a>
+
+                                    <a href="#Media" class="plugin-tag">Media</a>
+
+                                </div>
+                            </li>
+                            
+                            <li class="plugin on">
                                 <a href="http://viid.me/qlfzA2" class="plugin-name" target="_blank">LazyLoad Patcher</a>
                                 <p class="plugin-desc">For use with themes that change the size of elements that are lazily loaded.</p>
                                 <div class="plugin-tag-list">
