--- a/themes.html
+++ b/themes.html
@@ -185,7 +185,7 @@
                         <h1 id="plugin-list-title">Themes</h1>
                         <a href="https://goo.gl/forms/5KrnbDpSm2E0IIs32" target="_blank" class="add-pencil" title="Add Theme"><i class="fa fa-plus"></i></a>
                         <input type="search" id="plugin-search-input" placeholder="Search themes...">
-                        <div id="plugin-list-count">42 items</div>
+                        <div id="plugin-list-count">43 items</div>
                     </header>
                     <div class="theme-btns">
                         <div class="theme-class">
@@ -939,6 +939,26 @@
                                 <a href="#Cold" class="plugin-tag">Cold</a>
 
                                 <a href="#Blue" class="plugin-tag">Blue</a>
+
+                                <a href="#Transparent" class="plugin-tag">Transparent</a>
+
+                            </div>
+                        </li>
+                        
+                        <li class="plugin on">
+                            <div class="plugin-screenshot">
+                                <img src="https://imgur.com/ME6KMNQ.gif" data-src="https://i.imgur.com/6yQMv9E.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
+                                <a href="https://betterdocs.net/themes/glossy-cyan.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a>
+                            </div>
+                            <a href="https://betterdocs.net/themes/glossy-cyan.html" class="plugin-name">Glossy Cyan</a>
+                            <p class="plugin-desc">A cyan theme</p>
+                            <div class="plugin-tag-list">
+
+                                <a href="#HansAnonymous" class="plugin-tag">HansAnonymous</a>
+
+                                <a href="#Cold" class="plugin-tag">Dark</a>
+
+                                <a href="#Blue" class="plugin-tag">Cyan</a>
 
                                 <a href="#Transparent" class="plugin-tag">Transparent</a>
 
