fixed formatting and added plugin

--- a/plugins.html
+++ b/plugins.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
 
-<head>
-
     <head>
         <title>Plugins | Discord</title>
         <meta charset=utf-8>
@@ -184,7 +182,7 @@
                             <h1 id="plugin-list-title">Plugins</h1>
                             <a href="https://goo.gl/forms/CsqMsLqpFXHHqEb13" target="_blank" class="add-pencil" title="Add Plugin"><i class="fa fa-plus"></i></a>
                             <input type="search" id="plugin-search-input" placeholder="Search plugins...">
-                            <div id="plugin-list-count">62 items</div>
+                            <div id="plugin-list-count">63 items</div>
                         </header>
                         <div class="theme-btns">
                             <div class="theme-class">
@@ -508,6 +506,20 @@
                                     <a href="#Save" class="plugin-tag">Save</a>
 
                                     <a href="#Image" class="plugin-tag">Image</a>
+
+                                </div>
+                            </li>
+                            
+                            <li class="plugin on">
+                                <a href="http://viid.me/qQ6FM2" class="plugin-name" target="_blank">BetterFormatting</a>
+                                <p class="plugin-desc">Let's you format your messages with buttons and adds more formatting options</p>
+                                <div class="plugin-tag-list">
+
+                                    <a href="#Anxeal" class="plugin-tag">Anxeal</a>
+
+                                    <a href="#Format" class="plugin-tag">Format</a>
+
+                                    <a href="#Style" class="plugin-tag">Style</a>
 
                                 </div>
                             </li>
@@ -983,7 +995,7 @@
 
                             <li class="plugin on">
                                 <a href="http://viid.me/qypKAc" class="plugin-name" target="_blank">4Chan Quoting</a>
-                                <p class="plugin-desc">Send a message with > at the start of a message to make the text green like 4Chan!</p>
+                                <p class="plugin-desc">Send a message with &#62; at the start of a message to make the text green like 4Chan!</p>
                                 <div class="plugin-tag-list">
 
                                     <a href="#MRVDOG" class="plugin-tag">MRVDOG</a>
@@ -997,7 +1009,7 @@
 
                             <li class="plugin on">
                                 <a href="http://viid.me/qsZHl6" class="plugin-name" target="_blank">GreenText</a>
-                                <p class="plugin-desc">Use a greater-than symbol '>' at the beginning of a sentence to make text green.</p>
+                                <p class="plugin-desc">Use a greater-than symbol &#62; at the beginning of a sentence to make text green.</p>
                                 <div class="plugin-tag-list">
 
                                     <a href="#Arashiryuu" class="plugin-tag">Arashiryuu</a>
@@ -1013,7 +1025,7 @@
                             
                             <li class="plugin on">
                                 <a href="http://viid.me/qlfv5M" class="plugin-name" target="_blank">OrangeText</a>
-                                <p class="plugin-desc">Use a less-than symbol < at the end of a sentence to make text orange.</p>
+                                <p class="plugin-desc">Use a less-than symbol &#60; at the end of a sentence to make text orange.</p>
                                 <div class="plugin-tag-list">
 
                                     <a href="#Arashiryuu" class="plugin-tag">Arashiryuu</a>
