--- a/shop/themes.html
+++ b/shop/themes.html
@@ -177,11 +177,11 @@
 }
 .first-shop-title {
 	color: #fff !important;
-	font-size: 38px !important;
+	font-size: 35px !important;
 }
 .second-shop-title {
 	color: #fff !important;
-	font-size: 58px !important;
+	font-size: 48px !important;
 }
 .shop-title {
 	line-height: 20px !important;	  
@@ -196,11 +196,11 @@
         <section class="shop-possibility">
             <div class="theme-shopping standard cf">
                   <div class="info cf">
-                  <p class="shop-title first-shop-title">Better</p>
-                  <p class="shop-title second-shop-title">Theming</p>
+                  <p class="shop-title first-shop-title">Theme</p>
+                  <p class="shop-title second-shop-title">Commissions</p>
                 <hr>
                 <p>We have made dozens of themes together.</p>
-                <p>With each theme having its own unique features and design, all themes are built in their own unique way! In just days you will recieve your brand new looking theme!</p>
+                <p>With each theme having its own unique features and design, all themes are built in their own unique way! In just days you will recieve your brand new looking theme! You have total control on how you want us to make your next theme.</p>
                 <p>All rights reserved.</p>
               </div>
                   <div class="links cf">
