--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <body>
     <div id="container">
-        <?php include 'https://betterdocs.net/php/toolbar.php';?>
+        <?php include 'php/toolbar.php';?>
         <div id="content-wrap">
             <div id="content" class="wrapper">
                 <div id="content-inner">
